fix: blog styles to fit on small screen

--- a/src/styles/blog-post.css
+++ b/src/styles/blog-post.css
@@ -1,6 +1,7 @@
 .blog > section {
-  display: grid;
-  max-width: 65ch;
+  display: flex;
+  flex-direction: column;
+  max-width: 90ch;
   margin: 0 auto;
   padding: var(--space-s) var(--space-l);
   gap: var(--space-s);
